--- a/class_mar6/index.html
+++ b/class_mar6/index.html
@@ -1,1 +1,20 @@
 <!doctype html>
+<html>
+    <head>
+        <title>My Page!</title>
+    </head>
+    <body>
+        <h1>My Page!</h1>
+        <p>Enter your name:</p>
+        <form>
+            <input type="text">
+            <button type="button">Go!</button>
+        </form>
+        <hr>
+        <ul>
+            <li>Bob</li>
+            <li>Bill</li>
+            <li>Jack</li>
+        </ul>
+    </body>
+</html>
